samples for the docker image

--- a/samples/jca/android-cc/config/Android0108.config
+++ b/samples/jca/android-cc/config/Android0108.config
@@ -1,9 +1,12 @@
 config android0108 {
-	src = /Users/rbonifacio/workspace-rascal/CrySL/samples/jca; 
-	out = /Users/rbonifacio/workspace-rascal/CrySL/samples/jca/android-cc/target/research/0108;
+	src = /mcsl/MetaCrySL/samples/jca; 
+	out = /target/android-cc-025plus;
 	
 	load spec base/;
-	
+
 	load refinement android-cc/01plus/;
-	load refinement android-cc/0108/;	
+	load refinement android-cc/10plus/;
+	load refinement android-cc/11plus/;
+	load refinement android-cc/14plus/;
+	load refinement android-cc/16plus/;
 }
