--- a/samples/jca/android-cc/config/Android0116.config
+++ b/samples/jca/android-cc/config/Android0116.config
@@ -1,6 +1,6 @@
 config android01168 {
-	src = /Users/rbonifacio/workspace-rascal/CrySL/samples/jca; 
-	out = /Users/rbonifacio/workspace-rascal/CrySL/samples/jca/android-cc/target/research/0116;
+	src = /mcsl/MetaCrySL/samples/jca; 
+	out = /target/android-cc-0116;
 	
 	load spec base/;
 	
