--- a/samples/jca/android/config/Android25plus.config
+++ b/samples/jca/android/config/Android25plus.config
@@ -1,6 +1,6 @@
 config Android0108 {
-	src = /Users/rbonifacio/workspace-rascal/CrySL/samples/jca; 
-	out = /Users/rbonifacio/workspace-rascal/CrySL/samples/jca/android/target/research/25plus;
+	src = /mcsl/MetaCrySL/samples/jca; 
+	out = /target/android-25plus;
 	
 	load spec base/;
 	
