--- a/samples/jca/android-bsi/config/Android0116.config
+++ b/samples/jca/android-bsi/config/Android0116.config
@@ -1,7 +1,7 @@
 config Android0116 {
-	src = /Users/rbonifacio/workspace-rascal/CrySL/samples/jca; 
-	out = /Users/rbonifacio/workspace-rascal/CrySL/samples/jca/android-bsi/target/research/0116;
-	
+	src = /mcsl/MetaCrySL/samples/jca; 
+	out = /target/android-bsi-0116
+
 	load spec base/;
 	
 	load refinement android-bsi/01plus/;
