--- a/samples/jca/android/config/Android0108.config
+++ b/samples/jca/android/config/Android0108.config
@@ -1,6 +1,6 @@
 config Android0108 {
-	src = /Users/rbonifacio/workspace-rascal/CrySL/samples/jca; 
-	out = /Users/rbonifacio/workspace-rascal/CrySL/samples/jca/android/target/research/0108;
+	src = /mcsl/MetaCrySL/samples/jca; 
+	out = /target/android-0108;
 	
 	load spec base/;
 	
