fixing target folders

--- a/samples/jca/android-bsi/config/Android0116.config
+++ b/samples/jca/android-bsi/config/Android0116.config
@@ -1,6 +1,6 @@
 config Android0116 {
 	src = /mcsl/MetaCrySL/samples/jca; 
-	out = /target/android-bsi-0116
+	out = /target/android-bsi-0116;
 
 	load spec base/;
 	
