--- a/samples/jca/android-cc/config/Android0108.config
+++ b/samples/jca/android-cc/config/Android0108.config
@@ -1,6 +1,6 @@
 config android0108 {
 	src = /mcsl/MetaCrySL/samples/jca; 
-	out = /target/android-cc-025plus;
+	out = /target/android-cc-0108;
 	
 	load spec base/;
 
